--- a/AuthService/AuthService.csproj
+++ b/AuthService/AuthService.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Core\Core.csproj" />
+      <ProjectReference Include="..\Auth.Core\Auth.Core.csproj" />
     </ItemGroup>
 
 </Project>
