--- a/WebManagerMVC/WebManagerMVC.csproj
+++ b/WebManagerMVC/WebManagerMVC.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="EasyNetQ" Version="7.8.0" />
+    </ItemGroup>
+
 </Project>
