--- a/NotificationService/appsettings.json
+++ b/NotificationService/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "EasyNetQ": "host=localhost;username=rmuser;password=rmpassword"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
