--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,19 @@ services:
     ports:
       - "15672:15672"
       - "5672:5672"
+      
+  maildev:
+    image: maildev/maildev
+    restart: always
+    environment:
+      - MAILDEV_WEB_PORT=1080
+      - MAILDEV_SMTP_PORT=1025
+    ports:
+      - "1080:1080"
+      - "1025:1025"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
 
     
