--- a/HandbookService/HandbookService.csproj
+++ b/HandbookService/HandbookService.csproj
@@ -9,7 +9,12 @@
     <ItemGroup>
         <PackageReference Include="EasyNetQ" Version="7.8.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Presentation\" />
     </ItemGroup>
 
 </Project>
