Added HandbookService and import from

--- a/HandbookService/appsettings.Development.json
+++ b/HandbookService/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "EasyNetQ": "host=localhost;username=rmuser;password=rmpassword",
+    "RemoteHandbookUrl": "https://1c-mockup.kreosoft.space/api/dictionary/",
+    "RemoteHandbookUsername": "student",
+    "RemoteHandbookPassword": "ny6gQnyn4ecbBrP9l1Fz",
+    "HandbookDatabase": "Host=localhost; Port=5432; Database=handbook_database; Username=yuriyyangel; Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
