--- a/EnrollmentService/EnrollmentService.csproj
+++ b/EnrollmentService/EnrollmentService.csproj
@@ -9,7 +9,16 @@
     <ItemGroup>
         <PackageReference Include="EasyNetQ" Version="7.8.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Application\Middleware\" />
+      <Folder Include="Application\Services\" />
+      <Folder Include="Domain\Model\" />
+      <Folder Include="Domain\Services\" />
     </ItemGroup>
 
 </Project>
