--- a/EnrollmentService/EnrollmentService.csproj
+++ b/EnrollmentService/EnrollmentService.csproj
@@ -10,6 +10,10 @@
         <PackageReference Include="EasyNetQ" Version="7.8.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
@@ -19,6 +23,11 @@
       <Folder Include="Application\Services\" />
       <Folder Include="Domain\Model\" />
       <Folder Include="Domain\Services\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AuthService\AuthService.csproj" />
+      <ProjectReference Include="..\HandbookService\HandbookService.csproj" />
     </ItemGroup>
 
 </Project>
