Added new entity for Enrollment and Common module - Added Manager Entity - Added BaseEntity in common module - Reorganized enrollment entity

--- a/EnrollmentService/EnrollmentService.csproj
+++ b/EnrollmentService/EnrollmentService.csproj
@@ -20,8 +20,8 @@
 
     <ItemGroup>
       <Folder Include="Application\Middleware\" />
-      <Folder Include="Application\Services\" />
       <Folder Include="Domain\Services\" />
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
     <ItemGroup>
