Added many new feature - Added ApplicantRepository and it's implementation - Added UseCase for saving entity in enrollment database - Added side-server communication with rabbit, for send user model when user register in login method

--- a/EnrollmentService/EnrollmentService.csproj
+++ b/EnrollmentService/EnrollmentService.csproj
@@ -20,7 +20,7 @@
 
     <ItemGroup>
       <Folder Include="Application\Middleware\" />
-      <Folder Include="Domain\Services\" />
+      <Folder Include="Domain\Service\" />
       <Folder Include="Migrations\" />
     </ItemGroup>
 
