--- a/HandbookService/HandbookService.csproj
+++ b/HandbookService/HandbookService.csproj
@@ -27,4 +27,8 @@
       <Folder Include="Migrations\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Common\Common.csproj" />
+    </ItemGroup>
+
 </Project>
